[package]
name = "container-compose"
version = "0.0.1-alpha.2"
edition = "2024"
license-file = "LICENSE"
description = " A docker-compose like tool for Apple Containers"
homepage = "https://github.com/noghartt/container-compose"
repository = "https://github.com/noghartt/container-compose"
readme = "README.md"
keywords = ["devops"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_mangen = "0.2.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
